Option -u can specify a filename instead of URL

--- a/sets2rootfs.1
+++ b/sets2rootfs.1
@@ -63,7 +63,7 @@ The default is a version of running operating system.
 Operating system. Currently either NetBSD or OpenBSD.
 The default is a running operating system.
 .It Fl \&u
-URL to SHA256, SHA512 or similar file that describes cksums for sets.
+URL of filename to SHA256, SHA512 or similar file that describes cksums for sets.
 The default is
 https://cdn.netbsd.org/pub/NetBSD/NetBSD-$release/$machine/binary/sets/SHA512
 for NetBSD and
