Minor improvements in man page

--- a/sets2rootfs.1
+++ b/sets2rootfs.1
@@ -2,7 +2,7 @@
 .\" Absolutely no warranty.
 .\"
 .\" ------------------------------------------------------------------
-.Dd May 13, 2024
+.Dd May 22, 2024
 .Dt SETS2ROOTFS 1
 .Os
 .Sh NAME
@@ -34,7 +34,7 @@
 .Sh DESCRIPTION
 .Nm
 downloads cksum file for NetBSD/OpenBSD sets, checks the checksums and unpacks
-downloaded sets, thus creating rootfs for the system.
+downloaded sets, thus creating a template for rootfs of the system.
 .Pp
 The following options are available:
 .Bl -tag -width indent
