--- a/sets2rootfs.1
+++ b/sets2rootfs.1
@@ -121,6 +121,9 @@ The default is
     -i base -i etc
  # sets2rootfs -c /tmp/NetBSD.cache -d /var/chroots/NetBSD-20240513 \\
     -u http://nyftp.netbsd.org/pub/NetBSD-daily/HEAD/latest/riscv-riscv64/binary/sets/MD5
+ # env FTP_CALL='wget -O' CKSUM_CALL='digest' sets2rootfs \\
+    -c /tmp/OpenBSD-7.5.cache -s OpenBSD -mamd64 -r 7.5 \\
+    -d /tmp/rootfs-OpenBSD-7.5
 .Ed
 .Sh EXIT STATUS
 .Ex -std
